--- a/xv6/xv6-public/Makefile
+++ b/xv6/xv6-public/Makefile
@@ -183,6 +183,7 @@ UPROGS=\
 	_zombie\
 	_getChildrenTest\
 	_getCountTest\
+	_pprcTest\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
