--- a/xv6/xv6-public/Makefile
+++ b/xv6/xv6-public/Makefile
@@ -188,6 +188,8 @@ UPROGS=\
 	_chpr\
 	_chpl\
 	_waitc\
+	_OriginalSchedTest\
+        _PrioritySchedTest\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
