--- a/xv6/xv6-public/Makefile
+++ b/xv6/xv6-public/Makefile
@@ -190,6 +190,7 @@ UPROGS=\
 	_waitc\
 	_OriginalSchedTest\
         _PrioritySchedTest\
+	_ticketTest\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
