--- a/xv6/xv6-public/Makefile
+++ b/xv6/xv6-public/Makefile
@@ -191,6 +191,7 @@ UPROGS=\
 	_OriginalSchedTest\
         _PrioritySchedTest\
 	_ticketTest\
+	_rwTest\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
